# gobdo-llamaindex

./: data.json  generateData.sh  main.py  pyproject.toml
qdrant_data/: meta.json
qdrant_data/collection/services/: storage.sqlite
qdrant_data/collection/tweets/: storage.sqlite
utils/: bun.lockb  dirtydata.json  index.ts  meilisearch.ts  package-lock.json  package.json
